--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"eslint": "8.49.0",
 		"eslint-config-next": "13.4.19",
 		"lucia": "^2.5.0",
-		"next": "13.5.6",
+		"next": "13.5.7-canary.37",
 		"postcss": "8.4.29",
 		"prettier": "^3.0.3",
 		"react": "18.2.0",
