--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"dependencies": {
 		"@lucia-auth/adapter-prisma": "^3.0.1",
 		"@lucia-auth/oauth": "^3.1.0",
-		"@prisma/client": "5.2.0",
+		"@prisma/client": "^5.7.1",
 		"@types/node": "20.6.0",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
